# zachet

./: CMakeLists.txt  Divider.cpp  Divider.hpp  calc.cpp  culc.hpp  divider.cpp  main.cpp
.github/workflows/: cmake.yml
tests/: test.cpp  tests.cpp
